--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!--
-New Event
-http://www.templatemo.com/tm-486-new-event
--->
-<title>New Event - Responsive HTML Template</title>
+<title>TECHNOJAM</title>
 <meta name="description" content="">
 <meta name="author" content="">
 <meta charset="UTF-8">
@@ -50,19 +46,19 @@ http://www.templatemo.com/tm-486-new-event
 				<span class="icon icon-bar"></span>
 				<span class="icon icon-bar"></span>
 			</button>
-			<a href="#" class="navbar-brand">New Event</a>
+			<a href="#" class="navbar-brand">TECHNOJAM</a>
 		</div>
 
 		<div class="collapse navbar-collapse">
 
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#intro" class="smoothScroll">Intro</a></li>
+				<!-- <li><a href="#intro" class="smoothScroll">Intro</a></li> -->
 				<li><a href="#overview" class="smoothScroll">Overview</a></li>
-				<li><a href="#speakers" class="smoothScroll">Speakers</a></li>
-				<li><a href="#program" class="smoothScroll">Programs</a></li>
-				<li><a href="#register" class="smoothScroll">Register</a></li>
-				<li><a href="#venue" class="smoothScroll">Venue</a></li>
-				<li><a href="#sponsors" class="smoothScroll">Sponsors</a></li>
+				<li><a href="#speakers" class="smoothScroll">Team</a></li>
+				<li><a href="#program" class="smoothScroll">Events</a></li>
+				<!-- <li><a href="#register" class="smoothScroll">Register</a></li> -->
+				<!-- <li><a href="#venue" class="smoothScroll">Venue</a></li> -->
+				<!-- <li><a href="#sponsors" class="smoothScroll">Sponsors</a></li> -->
 				<li><a href="#contact" class="smoothScroll">Contact</a></li>
 			</ul>
 
@@ -147,7 +143,7 @@ http://www.templatemo.com/tm-486-new-event
 <!-- =========================
     VIDEO SECTION   
 ============================== -->
-<section id="video" class="parallax-section">
+<!-- <section id="video" class="parallax-section">
 	<div class="container">
 		<div class="row">
 
@@ -164,7 +160,7 @@ http://www.templatemo.com/tm-486-new-event
 
 		</div>
 	</div>
-</section>
+</section> -->
 
 
 <!-- =========================
@@ -183,7 +179,7 @@ http://www.templatemo.com/tm-486-new-event
 
 			<!-- Testimonial Owl Carousel section
 			================================================== -->
-			<div id="owl-speakers" class="owl-carousel">
+			<div id="owl-speakers">
 
 				<div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.9s">
 					<div class="speakers-wrapper">
@@ -426,7 +422,7 @@ http://www.templatemo.com/tm-486-new-event
 <!-- =========================
    REGISTER SECTION   
 ============================== -->
-<section id="register" class="parallax-section">
+<!-- <section id="register" class="parallax-section">
 	<div class="container">
 		<div class="row">
 
@@ -452,19 +448,19 @@ http://www.templatemo.com/tm-486-new-event
 
 		</div>
 	</div>
-</section>
+</section> -->
 
 
 <!-- =========================
     FAQ SECTION   
 ============================== -->
-<section id="faq" class="parallax-section">
+<!-- <section id="faq" class="parallax-section">
 	<div class="container">
 		<div class="row">
 
 			<!-- Section title
 			================================================== -->
-			<div class="wow bounceIn col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 text-center">
+			<!-- <div class="wow bounceIn col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 text-center">
 				<div class="section-title">
 					<h2>Do you have Questions?</h2>
 					<p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet.</p>
@@ -527,13 +523,13 @@ http://www.templatemo.com/tm-486-new-event
 
 		</div>
 	</div>
-</section>
+</section> -->
 
 
 <!-- =========================
     VENUE SECTION   
 ============================== -->
-<section id="venue" class="parallax-section">
+<!-- <section id="venue" class="parallax-section">
 	<div class="container">
 		<div class="row">
 
@@ -548,13 +544,13 @@ http://www.templatemo.com/tm-486-new-event
 
 		</div>
 	</div>
-</section>
+</section> -->
 
 
 <!-- =========================
     SPONSORS SECTION   
 ============================== -->
-<section id="sponsors" class="parallax-section">
+<!-- <section id="sponsors" class="parallax-section">
 	<div class="container">
 		<div class="row">
 
@@ -583,7 +579,7 @@ http://www.templatemo.com/tm-486-new-event
 
 		</div>
 	</div>
-</section>
+</section> -->
 
 
 <!-- =========================
