Updated home page

--- a/index.html
+++ b/index.html
@@ -76,10 +76,13 @@
 		<div class="row">
 
 			<div class="col-md-12 col-sm-12">
-				<h3 class="wow bounceIn" data-wow-delay="0.9s">July 22 - 26 in San Francisco, CA</h3>
-				<h1 class="wow fadeInUp" data-wow-delay="1.6s">Web Design Conference</h1>
-				<a href="#overview" class="btn btn-lg btn-default smoothScroll wow fadeInUp hidden-xs" data-wow-delay="2.3s">LEARN MORE</a>
-				<a href="#register" class="btn btn-lg btn-danger smoothScroll wow fadeInUp" data-wow-delay="2.3s">REGISTER NOW</a>
+				<div class="img-box wow bounceInDown" data-wow-delay="0.5s"><img src="images/logo.png" alt="LOGO"></div>
+				<!-- <h3 class="wow bounceIn" data-wow-delay="0.9s">July 22 - 26 in San Francisco, CA</h3> -->
+				<h1 class="wow fadeInUp fst" data-wow-delay="1.2s">THROTTLE</h1>
+				<h3 class="wow fadeInUp snd" data-wow-delay="1.4s">to</h3>
+				<h1 class="wow fadeInUp thr" data-wow-delay="1.6s">LEARN</h1>
+				<a href="#overview" class="btn btn-lg btn-default smoothScroll wow fadeInUp hidden-xs" data-wow-delay="2.3s">MORE</a>
+				<!-- <a href="#register" class="btn btn-lg btn-danger smoothScroll wow fadeInUp" data-wow-delay="2.3s">REGISTER NOW</a> -->
 			</div>
 
 
@@ -227,6 +230,36 @@
 							<div class="speakers-thumb">
 								<h3>Elite Hamilton</h3>
 								<h6>Marketing Guru</h6>
+							</div>
+					</div>
+				</div>
+
+				<div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.9s">
+					<div class="speakers-wrapper">
+						<img src="images/speakers-img1.jpg" class="img-responsive" alt="speakers">
+							<div class="speakers-thumb">
+								<h3>Jenny Green</h3>
+								<h6>UI Designer</h6>
+							</div>
+					</div>
+				</div>
+
+				<div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.9s">
+					<div class="speakers-wrapper">
+						<img src="images/speakers-img1.jpg" class="img-responsive" alt="speakers">
+							<div class="speakers-thumb">
+								<h3>Jenny Green</h3>
+								<h6>UI Designer</h6>
+							</div>
+					</div>
+				</div>
+
+				<div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.9s">
+					<div class="speakers-wrapper">
+						<img src="images/speakers-img1.jpg" class="img-responsive" alt="speakers">
+							<div class="speakers-thumb">
+								<h3>Jenny Green</h3>
+								<h6>UI Designer</h6>
 							</div>
 					</div>
 				</div>
