Added responsive navigation bar

--- a/index.html
+++ b/index.html
@@ -41,15 +41,16 @@
 
 		<!-- navbar header -->
 		<div class="navbar-header">
-			<button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-				<span class="icon icon-bar"></span>
-				<span class="icon icon-bar"></span>
-				<span class="icon icon-bar"></span>
-			</button>
+			<div class="navbar-toggler-back"></div>
+			<div class="navbar-toggler">
+				<span class="icon icon-bar bar-1"></span>
+				<span class="icon icon-bar bar-2"></span>
+				<span class="icon icon-bar bar-3"></span>
+			</div>
 			<a href="#" class="navbar-brand">TECHNOJAM</a>
 		</div>
 
-		<div class="collapse navbar-collapse">
+		<div class="navbar-body">
 
 			<ul class="nav navbar-nav navbar-right">
 				<!-- <li><a href="#intro" class="smoothScroll">Intro</a></li> -->
