--- a/index.html
+++ b/index.html
@@ -662,9 +662,9 @@
 		<div class="row">
 
 			<div class="col-md-12 col-sm-12">
-				<p class="wow fadeInUp" data-wow-delay="0.6s">Copyright &copy; 2016 Your Company 
+				<p class="wow fadeInUp" data-wow-delay="0.6s">Copyright &copy; 2019 TECHNOJAM 
                     
-                    | Design: <a rel="nofollow" href="http://www.templatemo.com/page/1" target="_parent">Templatemo</a></p>
+                    | Design: Team Members</p>
 
 				<ul class="social-icon">
 					<li><a href="#" class="fa fa-facebook wow fadeInUp" data-wow-delay="1s"></a></li>
@@ -682,7 +682,9 @@
 
 
 <!-- Back top -->
-<a href="#back-top" class="go-top"><i class="fa fa-angle-up"></i></a>
+<div class="go-top">
+	<a href="#back-top"><i class="fa fa-angle-up"></i></a>
+</div>
 
 
 <!-- =========================
