--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <title>TECHNOJAM</title>
+<link rel="icon" href="./images/fav-icon.png">
 <meta name="description" content="">
 <meta name="author" content="">
 <meta charset="UTF-8">
@@ -302,13 +303,14 @@
 						</div>
 						<div class="col-md-10 col-sm-10">
 							<h6>
+								<span><i class="fa fa-calendar"></i> 10/10/10</span>
 								<span><i class="fa fa-clock-o"></i> 10.00 AM</span>
 								<span><i class="fa fa-map-marker"></i> Room A-301</span>
+								<span class="badge badge-danger">#Hackathon</span>
 							</h6>
-							<h3>Technofest</h3>
-							<h4>Hackathon</h4>
-							<p></p>
-						</div>
+							<h3>Technofest</h3>					
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+							<button type="button" class="btn btn-success">Register now</button></div>
 						<!-- program divider -->
 						<div class="program-divider col-md-12 col-sm-12"></div>
 						<!-- program speaker here -->
@@ -317,12 +319,15 @@
 						</div>
 						<div class="col-md-10 col-sm-10">
 							<h6>
+								<span><i class="fa fa-calendar"></i> 10/10/10</span>
 								<span><i class="fa fa-clock-o"></i> 10.00 AM</span>
 								<span><i class="fa fa-map-marker"></i> Room A-301</span>
+								<span class="badge badge-danger">#Workshop</span>
 							</h6>
 							<h3>CLOUD MACHINE LEARNING ENGINE</h3>
-							<h4>Workshop</h4>
-							<p>Build superior models and deploy them into production.</p>
+							<h4>By Abhimanyu Dwivedi</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+							<button type="button" class="btn btn-warning">Registration not started</button>
 						</div>
 
 						<!-- program divider -->
@@ -336,12 +341,16 @@
 						</div>
 						<div class="col-md-10 col-sm-10">
 							<h6>
+								<span><i class="fa fa-calendar"></i> 10/10/10</span>
 								<span><i class="fa fa-clock-o"></i> 01.00 PM</span>
 								<span><i class="fa fa-map-marker"></i> Room 450</span>
+								<span class="badge badge-danger">#Workshop</span>
 							</h6>
 							<h3>Google Cloud Study Jam</h3>
-							<h4>Workshop</h4>
+							<h4>By Sashi Bhushan</h4>
+
 							<p>A Study Jam Based on the basic knowledge of Google Cloud</p>
+							<button type="button" class="btn btn-danger">Event ended</button>
 						</div>
 
 						<!-- program divider -->
@@ -352,12 +361,15 @@
 						</div>
 						<div class="col-md-10 col-sm-10">
 							<h6>
+								<span><i class="fa fa-calendar"></i> 10/10/10</span>
 								<span><i class="fa fa-clock-o"></i> 03.00 PM</span>
 								<span><i class="fa fa-map-marker"></i> Room 650</span>
+								<span class="badge badge-danger">#Hackathon</span>
 							</h6>
 							<h3>Dexterix Hackathon</h3>
-							<h4>Hackathon</h4>
+							<h4>By Kaushtubh Rai And Honey Sharma</h4>
 							<p>Technojam conducted galgotias first ever hackathon with a great success.</p>
+							<button type="button" class="btn btn-danger">Event ended</button>
 						</div>
 
 						<!-- program divider -->
@@ -369,12 +381,15 @@
 						</div>
 						<div class="col-md-10 col-sm-10">
 							<h6>
+								<span><i class="fa fa-calendar"></i> 10/10/10</span>
 								<span><i class="fa fa-clock-o"></i> 11.00 AM</span>
 								<span><i class="fa fa-map-marker"></i> Room 240</span>
+								<span class="badge badge-danger">#Workshop</span>
 							</h6>
 							<h3>Web Development</h3>
-							<h4>Workshop</h4>
+							<h4>By Abhimanyu Dwivedi</h4>
 							<p>A two day workshop which was conducted by team TechnoJam in order to give a basic knowledge of HTMl,JS and CSS by Developing a website</p>
+							<button type="button" class="btn btn-danger">Event ended</button>
 						</div>
 
 
