--- a/index.html
+++ b/index.html
@@ -128,20 +128,20 @@
 
 			<div class="wow fadeInLeft col-md-4 col-sm-4" data-wow-delay="0.3s">
 				<i class="fa fa-group"></i>
-				<h3>650 Participants</h3>
-				<p>Quisque ut libero sapien. Integer tellus nisl, efficitur sed dolor at, vehicula finibus massa. Sed tincidunt metus sed eleifend suscipit.</p>
+				<h3>50 Members</h3>
+				<p>Team TechnoJam consist of 50 people and we all work together like a strong team.</p>
 			</div>
 
 			<div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.6s">
 				<i class="fa fa-clock-o"></i>
-				<h3>24 Programs</h3>
-				<p>Quisque ut libero sapien. Integer tellus nisl, efficitur sed dolor at, vehicula finibus massa. Sed tincidunt metus sed eleifend suscipit.</p>
+				<h3>20+ Events</h3>
+				<p>Technojam conducts more than 20 events per year.</p>
 			</div>
 
 			<div class="wow fadeInRight col-md-4 col-sm-4" data-wow-delay="0.9s">
 				<i class="fa fa-microphone"></i>
-				<h3>11 Speakers</h3>
-				<p>Quisque ut libero sapien. Integer tellus nisl, efficitur sed dolor at, vehicula finibus massa. Sed tincidunt metus sed eleifend suscipit.</p>
+				<h3></h3>
+				<p>.</p>
 			</div>
 
 		</div>
@@ -283,13 +283,13 @@
 						</div>
 						<div class="col-md-10 col-sm-10">
 							<h6>
-								<span><i class="fa fa-calendar"></i> 10/10/10</span>
+								<span><i class="fa fa-calendar"></i> 29/02/19</span>
 								<span><i class="fa fa-clock-o"></i> 10.00 AM</span>
-								<span><i class="fa fa-map-marker"></i> Room A-301</span>
+								<span><i class="fa fa-map-marker"></i> In Galgotias University</span>
 								<span class="badge badge-danger">#Hackathon</span>
 							</h6>
 							<h3>Technofest</h3>					
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+							<p>alhsj</p>
 							<button type="button" class="btn btn-success">Register now</button></div>
 						<!-- program divider -->
 						<div class="program-divider col-md-12 col-sm-12"></div>
@@ -306,7 +306,7 @@
 							</h6>
 							<h3>CLOUD MACHINE LEARNING ENGINE</h3>
 							<h4>By Abhimanyu Dwivedi</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+							<p>.</p>
 							<button type="button" class="btn btn-warning">Registration not started</button>
 						</div>
 
@@ -566,12 +566,18 @@
 					<div class="section-title">
 						<h2>Keep in touch</h2>
 					</div>
-					<form action="#" method="post">
+					<form action="https://formspree.io/amanrawat882@gmail.com" method="POST">
+     				<input type="text" name="name" class="form-control" id="name" placeholder="Name">
+     				<textarea name="message" rows="5" class="form-control" id="message" placeholder="Message"></textarea>
+   					<input type="email" name="_replyto" class="form-control" id="email" placeholder="Email">
+  					<input name="submit" type="submit" class="form-control" id="submit" value="SEND">
+</form>
+				<!--	<form action="#" method="post">
 						<input name="name" type="text" class="form-control" id="name" placeholder="Name">
 					  	<input name="email" type="email" class="form-control" id="email" placeholder="Email">
 					  	<textarea name="message" rows="5" class="form-control" id="message" placeholder="Message"></textarea>
 						<div class="col-md-6 col-sm-10">
-							<input name="submit" type="submit" class="form-control" id="submit" value="SEND">
+							<input name="submit" type="submit" class="form-control" id="submit" value="SEND">-->
 						</div>
 					</form>
 				</div>
