New minor changes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>TECHNOJAM</title>
+<title>Team TechnoJam|Galgotias University</title>
 <link rel="icon" href="./images/fav-icon.png">
 <meta name="description" content="">
 <meta name="author" content="">
@@ -139,15 +139,14 @@
 			</div>
 
 			<div class="wow fadeInRight col-md-4 col-sm-4" data-wow-delay="0.9s">
-				<i class="fa fa-microphone"></i>
-				<h3></h3>
-				<p>.</p>
+				<i class="fa fa-hands-helping"></i>
+				<h3>3000+ Attendees</h3>
+				<p>TechnoJam Reached upto 3000 people through its events.</p>
 			</div>
 
 		</div>
 	</div>
 </section>
-
 
 <!-- =========================
     VIDEO SECTION   
@@ -289,7 +288,8 @@
 								<span class="badge badge-danger">#Hackathon</span>
 							</h6>
 							<h3>Technofest</h3>					
-							<p>alhsj</p>
+							<h4>By Team TechnoJam</h4>
+							<p></p>
 							<button type="button" class="btn btn-success">Register now</button></div>
 						<!-- program divider -->
 						<div class="program-divider col-md-12 col-sm-12"></div>
@@ -317,20 +317,22 @@
 					<div role="tabpanel" class="tab-pane" id="sday">
 						<!-- program speaker here -->
 						<div class="col-md-2 col-sm-2">
-							<img src="images/program-img5.jpg" class="img-responsive" alt="program">
+							<img src="images/program-img1.jpg" class="img-responsive" alt="program">
 						</div>
 						<div class="col-md-10 col-sm-10">
 							<h6>
-								<span><i class="fa fa-calendar"></i> 10/10/10</span>
-								<span><i class="fa fa-clock-o"></i> 01.00 PM</span>
-								<span><i class="fa fa-map-marker"></i> Room 450</span>
+								<span><i class="fa fa-calendar"></i> 25/02/19</span>
+								<span><i class="fa fa-clock-o"></i> 10.00 AM</span>
+								<span><i class="fa fa-map-marker"></i> Room C-301</span>
 								<span class="badge badge-danger">#Workshop</span>
 							</h6>
 							<h3>Google Cloud Study Jam</h3>
 							<h4>By Sashi Bhushan</h4>
 
 							<p>A Study Jam Based on the basic knowledge of Google Cloud</p>
+							<a href="https://www.facebook.com/pg/technojam.scse/photos/?tab=album&album_id=1121074964757976">
 							<button type="button" class="btn btn-danger">Event ended</button>
+							</a>
 						</div>
 
 						<!-- program divider -->
@@ -341,15 +343,17 @@
 						</div>
 						<div class="col-md-10 col-sm-10">
 							<h6>
-								<span><i class="fa fa-calendar"></i> 10/10/10</span>
-								<span><i class="fa fa-clock-o"></i> 03.00 PM</span>
-								<span><i class="fa fa-map-marker"></i> Room 650</span>
+								<span><i class="fa fa-calendar"></i> 20/11/18</span>
+								<span><i class="fa fa-clock-o"></i> 10.00 AM</span>
+								<span><i class="fa fa-map-marker"></i> In Galgotias University</span>
 								<span class="badge badge-danger">#Hackathon</span>
 							</h6>
 							<h3>Dexterix Hackathon</h3>
 							<h4>By Kaushtubh Rai And Honey Sharma</h4>
 							<p>Technojam conducted galgotias first ever hackathon with a great success.</p>
+							<a href="https://www.facebook.com/media/set/?set=a.1058672127664927&type=1&l=b8abe367af">
 							<button type="button" class="btn btn-danger">Event ended</button>
+							</a>
 						</div>
 
 						<!-- program divider -->
@@ -357,19 +361,21 @@
 
 						<!-- program speaker here -->
 						<div class="col-md-2 col-sm-2">
-							<img src="images/program-img4.jpg" class="img-responsive" alt="program">
+							<img src="images/program-img7.jpg" class="img-responsive" alt="program">
 						</div>
 						<div class="col-md-10 col-sm-10">
 							<h6>
-								<span><i class="fa fa-calendar"></i> 10/10/10</span>
-								<span><i class="fa fa-clock-o"></i> 11.00 AM</span>
-								<span><i class="fa fa-map-marker"></i> Room 240</span>
+								<span><i class="fa fa-calendar"></i> 27/01/19</span>
+								<span><i class="fa fa-clock-o"></i> 10.00 AM</span>
+								<span><i class="fa fa-map-marker"></i> Room A-301</span>
 								<span class="badge badge-danger">#Workshop</span>
 							</h6>
-							<h3>Web Development</h3>
-							<h4>By Abhimanyu Dwivedi</h4>
-							<p>A two day workshop which was conducted by team TechnoJam in order to give a basic knowledge of HTMl,JS and CSS by Developing a website</p>
+							<h3>Roadmap To GSOC</h3>
+							<h4>By Hitesh Gautam</h4>
+							<p></p>
+							<a href="http://www.facebook.com/453005451564934/photos/?tab=album&album_id=1106015622930577">
 							<button type="button" class="btn btn-danger">Event ended</button>
+							</a>
 						</div>
 
 
@@ -566,7 +572,7 @@
 					<div class="section-title">
 						<h2>Keep in touch</h2>
 					</div>
-					<form action="https://formspree.io/amanrawat882@gmail.com" method="POST">
+					<form action="https://formspree.io/technojam@galgotiasuniversity.edu.initial-scale" method="POST">
      				<input type="text" name="name" class="form-control" id="name" placeholder="Name">
      				<textarea name="message" rows="5" class="form-control" id="message" placeholder="Message"></textarea>
    					<input type="email" name="_replyto" class="form-control" id="email" placeholder="Email">
