updated font awesome

--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
 				<i class="fa fa-clock-o"></i>
 				<h3>20+ Events</h3>
 				<p>Technojam conducts more than 20 events per year.</p>
-			</div>
+			</div>	
 
 			<div class="wow fadeInRight col-md-4 col-sm-4" data-wow-delay="0.9s">
-				<i class="fa fa-hands-helping"></i>
+				<i class="fa fa-male"></i>
 				<h3>3000+ Attendees</h3>
 				<p>TechnoJam Reached upto 3000 people through its events.</p>
 			</div>
