--- a/index.html
+++ b/index.html
@@ -290,29 +290,13 @@
 							<h3>Technofest</h3>					
 							<h4>By Team TechnoJam</h4>
 							<p></p>
-							<button type="button" class="btn btn-success">Register now</button></div>
+							<a href="https://www.facebook.com/pg/technojam.scse/events/?ref=page_internal">
+							<button type="button" class="btn btn-success">Register now</button>
+						 	</a>
+						 </div>
 						<!-- program divider -->
 						<div class="program-divider col-md-12 col-sm-12"></div>
-						<!-- program speaker here -->
-						<div class="col-md-2 col-sm-2">
-							<img src="images/program-img1.jpg" class="img-responsive" alt="program">
-						</div>
-						<div class="col-md-10 col-sm-10">
-							<h6>
-								<span><i class="fa fa-calendar"></i> 10/10/10</span>
-								<span><i class="fa fa-clock-o"></i> 10.00 AM</span>
-								<span><i class="fa fa-map-marker"></i> Room A-301</span>
-								<span class="badge badge-danger">#Workshop</span>
-							</h6>
-							<h3>CLOUD MACHINE LEARNING ENGINE</h3>
-							<h4>By Abhimanyu Dwivedi</h4>
-							<p>.</p>
-							<button type="button" class="btn btn-warning">Registration not started</button>
-						</div>
-
-						<!-- program divider -->
-						<div class="program-divider col-md-12 col-sm-12"></div>	
-				 	</div>
+					</div>
 
 					<div role="tabpanel" class="tab-pane" id="sday">
 						<!-- program speaker here -->
@@ -323,13 +307,13 @@
 							<h6>
 								<span><i class="fa fa-calendar"></i> 25/02/19</span>
 								<span><i class="fa fa-clock-o"></i> 10.00 AM</span>
-								<span><i class="fa fa-map-marker"></i> Room C-301</span>
+								<span><i class="fa fa-map-marker"></i> Room A-301</span>
 								<span class="badge badge-danger">#Workshop</span>
 							</h6>
 							<h3>Google Cloud Study Jam</h3>
 							<h4>By Sashi Bhushan</h4>
 
-							<p>A Study Jam Based on the basic knowledge of Google Cloud</p>
+							<p>Google Clo</p>
 							<a href="https://www.facebook.com/pg/technojam.scse/photos/?tab=album&album_id=1121074964757976">
 							<button type="button" class="btn btn-danger">Event ended</button>
 							</a>
@@ -559,10 +543,11 @@
 
 			<div class="wow fadeInUp col-md-offset-1 col-md-5 col-sm-6" data-wow-delay="0.6s">
 				<div class="contact_des">
-					<h3>New Event</h3>
+					<h3></h3>
 					<p>Our team has formed many other communities which include GU Student Developers Group, Slack Group, Cybermafias and many other so that students may get wide exposure to think and create.</p>
 					<p>To achieve our goal of excellence in the field of technology, we are trying our best to provide base so that they can grow, nurture and explore the opportunities.</p>
-					<a href="#" class="btn btn-danger">DOWNLOAD NOW</a>
+					<p>Our aim is to work on live projects to make the institute high-tech and represent our institute by participating at National level Tech-Fest and other technical events all around the nation. 
+					</p>
 				</div>
 			</div>
 
@@ -611,7 +596,6 @@
 					<li><a href="https://twitter.com/technojam_gu" class="fa fa-twitter wow fadeInUp" data-wow-delay="1.3s"></a></li>
 					<li><a href="https://www.instagram.com/technojam_galgotias/" class="fa fa-instagram wow fadeInUp" data-wow-delay="1.6s"></a></li>
 					<li><a href="https://github.com/technojam" class="fa fa-github wow fadeInUp" data-wow-delay="1.9s"></a></li>
-					<li><a href="#" class="fa fa-google-plus wow fadeInUp" data-wow-delay="2s"></a></li>
 				</ul>
 
 			</div>
