--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
 
 			<div class="wow fadeInUp col-md-6 col-sm-6" data-wow-delay="0.6s">
 				<h3></h3>
-				<p>“TECHNOJAM”, a technical community of School of Computing Science and Engineering Galgotias University was established in 2015 with an objective to work on various innovative projects which will bestow creative minds thinking patterns to the upcoming future engineers so that our mind can boost enough so that we can face any hurdles in the way of learning new tactics to deal with ever changing of dynamic technology. It is a platform to promote and coordinate research and development by students, through student-industry interaction giving students freedom and opportunities to work upon diverse areas of technology,as well as, pursue their own ideas so as to become innovators. To enhance the technical innovativeness of our institute students, we organize Seminars, Workshops, Hackathons, Techfest and many other competitions on various technical level in order to attract the interest of the students towards technical aspects of their education. 
+				<p>“TECHNOJAM”, a technical community of School of Computing Science and Engineering Galgotias University was established in 2015 with an objective to work on various innovative projects which will bestow creative minds thinking patterns to the upcoming future engineers so that our mind can boost enough so that we can face any hurdles in the way of learning new tactics to deal with ever changing of dynamic technology.</p>
+				<p> It is a platform to promote and coordinate research and development by students, through student-industry interaction giving students freedom and opportunities to work upon diverse areas of technology,as well as, pursue their own ideas so as to become innovators. To enhance the technical innovativeness of our institute students, we organize Seminars, Workshops, Hackathons, Techfest and many other competitions on various technical level in order to attract the interest of the students towards technical aspects of their education. </p>
 
 			</div>
 					
@@ -543,9 +544,12 @@
 
 			<div class="wow fadeInUp col-md-offset-1 col-md-5 col-sm-6" data-wow-delay="0.6s">
 				<div class="contact_des">
-					<h3></h3>
-					<p>Our team has formed many other communities which include GU Student Developers Group, Slack Group, Cybermafias and many other so that students may get wide exposure to think and create.</p>
-					<p>To achieve our goal of excellence in the field of technology, we are trying our best to provide base so that they can grow, nurture and explore the opportunities.</p>
+					<h3>Community:-</h3>
+					<p>Our team has formed many other communities which include GU Student Developers Group, Slack Group, Cybermafias and many other so that students may get wide exposure to think and create.
+					</p>
+					<h3>Projects:-</h3>
+					<p>There are so many projects we develop together to enhance our development skills. </p>
+					<h3>Members Actvities:-</h3>
 					<p>Our aim is to work on live projects to make the institute high-tech and represent our institute by participating at National level Tech-Fest and other technical events all around the nation. 
 					</p>
 				</div>
