--- a/index.html
+++ b/index.html
@@ -130,32 +130,44 @@
 			<div class="wow fadeInUp col-md-6 col-sm-6" data-wow-delay="0.9s">
 			
 			
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="3000">
     <!-- Indicators -->
     <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
       <li data-target="#myCarousel" data-slide-to="1"></li>
       <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+      <li data-target="#myCarousel" data-slide-to="4"></li>
+      <li data-target="#myCarousel" data-slide-to="5"></li>
     </ol>
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="images/1.jpg" alt="Los Angeles" style="width:100%;">
+        <img src="images/1.jpg" alt="Workshop" style="width:100%;">
         <div id="caption">A fun quzzing session after workshop</div>
       </div>
 
       <div class="item">
-        <img src="images/2.jpg" alt="Chicago" style="width:100%;">
+        <img src="images/2.jpg" alt="Workshop" style="width:100%;">
         <div id="caption">Python and Data Science Workshop ,GTBIT DELHI</div>
       </div>
     
       <div class="item">
-        <img src="images/3.jpg" alt="New york" style="width:100%;">
+        <img src="images/3.jpg" alt="Workshop" style="width:100%;">
         <div id="caption">Ethical Hacking Workshop, IGDTUW DELHI </div>
       </div>
       <div class="item">
-        <img src="images/3.jpg" alt="New york" style="width:100%;">
+        <img src="images/4.jpg" alt="Workshop" style="width:100%;">
+         <div id="caption">Dexterix 1.0 - "Hackathon"</div>
+      </div>
+      <div class="item">
+        <img src="images/5.jpg" alt="Workshop" style="width:100%;">
+         <div id="caption">Prize distribution - "Dexterix"</div>
+      </div>
+      <div class="item">
+        <img src="images/6.jpg" alt="Workshop" style="width:100%;">
+         <div id="caption">AOG Workshop, Galgotias University</div>
       </div>
 
   </div>  
@@ -969,7 +981,7 @@
 
 							<!-- program speaker here -->
 						<div class="col-md-2 col-sm-2">
-							<img src="images/logo.png" class="img-responsive" alt="program">
+							<img src="images/logo.png" class="img-responsive" alt="events">
 						</div>
 						<div class="col-md-10 col-sm-10">
 							<h6>
@@ -989,20 +1001,18 @@
 						<div class="program-divider col-md-12 col-sm-12"></div>
 							<!-- program speaker here -->
 						<div class="col-md-2 col-sm-2">
-							<img src="images/logo.png" class="img-responsive" alt="program">
+							<img src="images/program-img2.jpg" class="img-responsive" alt="program">
 						</div>
 						<div class="col-md-10 col-sm-10">
 							<h6>
-								<span><i class="fa fa-calendar"></i> 29/03/19</span>
-								<span><i class="fa fa-clock-o"></i> 10.00 AM</span>
+								<span><i class="fa fa-calendar"></i> To be decieded</span>
 								<span><i class="fa fa-map-marker"></i> In Galgotias University</span>
-								<span class="badge badge-danger">#Hackathon</span>
+								<span class="badge badge-danger">#Workshop</span>
 							</h6>
-							<h3>Technofest</h3>					
+							<h3>Android Workshop</h3>					
 							<h4>By Team TechnoJam</h4>
-							<p><b>TechFest’19</b> is 3-day technical fest of Galgotias University. Techfest’19, based on theme ‘UNIVERSE – Opportunities as vast as the universe we live in!’, will carry series of fun & learning technical events such as Dexter Lab, Hackathon, Developer Date, Treasure Hunt and Prowar.  TechFest ’19 will include TechTalks and workshop to enhance your technical capabilities</p>
-							<a href="https://www.facebook.com/pg/technojam.scse/events/?ref=page_internal">
-							<button type="button" class="btn btn-success">Register now</button>
+							<p>Team TechnoJam is presenting a android workshop in which we will introduce some basic terms of Android and we will also do a hands on session</p>
+							<button type="button" class="btn btn-warning">Coming soon</button>
 						 	</a>
 						 </div>
 						<!-- program divider -->
