Finalised Team Section

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 			<div class="card-front"><img src="images/speakers-img1.jpg" alt=""></div>
 			<div class="card-back">
 				<div class="details">
-					<h2 class="name">Shwetank Sharma</h2>
+					<h2 class="name">Swetank</h2>
 					<span class="seperator"></span>
 					<div class="links">
 						<a href="#" target="_blank"><i class="fa fa-github"></i></a>
@@ -247,8 +247,8 @@
 					<h2 class="name">Anubhav Raj Singh</h2>
 					<span class="seperator"></span>
 					<div class="links">
-						<a href="#" target="_blank"><i class="fa fa-github"></i></a>
-						<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						<a href="https://github.com/aanurraj" target="_blank"><i class="fa fa-github"></i></a>
+						<a href="https://www.linkedin.com/in/anubhavraj08/" target="_blank"><i class="fa fa-linkedin"></i></a>
 					</div>
 				</div>
 			</div>
