--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 				<!-- <li><a href="#venue" class="smoothScroll">Venue</a></li> -->
 				<!-- <li><a href="#sponsors" class="smoothScroll">Sponsors</a></li> -->
 				<li><a href="#contact" class="smoothScroll">Contact</a></li>
+				<li><a hre</li>
 			</ul>
 
 		</div>
@@ -1012,7 +1013,7 @@
 							<h3>Android Workshop</h3>					
 							<h4>By Team TechnoJam</h4>
 							<p>Team TechnoJam is presenting a android workshop in which we will introduce some basic terms of Android and we will also do a hands on session</p>
-							<button type="button" class="btn btn-warning">Coming soon</button>
+							<a href="#"><button type="button" class="btn btn-warning">Coming soon</button>
 						 	</a>
 						 </div>
 						<!-- program divider -->
