Updated Contact Section

--- a/index.html
+++ b/index.html
@@ -1261,7 +1261,6 @@
 <section id="contact" class="parallax-section">
 	<div class="container">
 		<div class="row">
-
 			<div class="wow fadeInUp col-md-offset-1 col-md-5 col-sm-6" data-wow-delay="0.6s">
 				<div class="contact_des">
 					<h3>Community:-</h3>
@@ -1274,7 +1273,6 @@
 					</p>
 				</div>
 			</div>
-
 			<div class="wow fadeInUp col-md-5 col-sm-6" data-wow-delay="0.9s">
 				<div class="contact_detail">
 					<div class="section-title">
@@ -1285,18 +1283,17 @@
    					<input type="email" name="_replyto" class="form-control" id="email" placeholder="Email">
    					<textarea name="message" rows="5" class="form-control" id="message" placeholder="Message"></textarea>
   					<input name="submit" type="submit" class="form-control" id="submit" value="SEND">
-</form>
-				<!--	<form action="#" method="post">
+					</form>
+					<!-- <form action="#" method="post">
 						<input name="name" type="text" class="form-control" id="name" placeholder="Name">
 					  	<input name="email" type="email" class="form-control" id="email" placeholder="Email">
 					  	<textarea name="message" rows="5" class="form-control" id="message" placeholder="Message"></textarea>
 						<div class="col-md-6 col-sm-10">
-							<input name="submit" type="submit" class="form-control" id="submit" value="SEND">-->
+							<input name="submit" type="submit" class="form-control" id="submit" value="SEND">
 						</div>
-					</form>
+					</form> -->
 				</div>
 			</div>
-
 		</div>
 	</div>
 </section>
